# OrboxPFE

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  config.json  install.sh  installNode.sh  installOpencv.sh  installOpencv.sh~  installPico2Wave.sh  installPigpio.sh  stream.sh
Common/: IdProvider.hpp  InputParser.cpp  InputParser.h  Rois.cpp  Rois.h  Screenshots.cpp
Docs/: Poster_Orbox_Robillard.pptx
Docs/Cahier_de_modelisation/: main.tex  mybib.bib
Docs/Cahier_de_modelisation/chapters/: intro.tex  software.tex  tech.tex  top_arch.tex
Docs/Cahier_de_specification/: annexes.tex  cahier_spec.tex  main.tex  plan_dev.tex
Docs/Rapport_PFE/: annexes.tex  main.tex  mybib.bib
Docs/Soutenance_PFE/: main.tex
ImgProcML/: CMakeLists.txt
ImgProcML/Common/: CMakeLists.txt  CMakeLists.txt~  IdProvider.hpp  InputParser.cpp  InputParser.h  InputParser.h~  Logger.h~  Rois.cpp  Rois.h  Screenshots.cpp  Screenshots.h  Stat.hpp  Timer.h~
ImgProcML/PerfTestUtil/: CMakeLists.txt  ClassificationTest.cpp  ClassificationTest.h  main.cpp
ImgProcML/PredictUtil/: CMakeLists.txt  main.cpp
ImgProcML/ScreenshotUtil/: App.cpp  App.h  CMakeLists.txt  main.cpp
ImgProcML/StatUtil/: CMakeLists.txt  main.cpp
PerfTestUtil/: CMakeLists.txt  ClassificationTest.cpp  ClassificationTest.h  main.cpp
ScreenshotUtil/: CMakeLists.txt
StatUtil/: CMakeLists.txt
WebServer/: config.js  package-lock.json  package.json  package.json~  server.js  server.js~
WebServer/public/css/: mystyle.css  mystyle.css~  w3.css
WebServer/views/: editObject.pug  home.pug  layout.pug  objects.pug  review.pug  screenshots.pug  stats.pug
data/: indexObjects.json  indexObjects.json~  indexRois.json  indexRois.txt~  indexScreenshots.json  indexScreenshots.txt~  knnconfig.yaml  predictParam.json  svmconfig.yaml  unreviewedRois.json
data/objects/: 1.json  2.json  2.json~  3.json  3.json~  4.json  5.json  5.json~  6.json  6.json~  7.json  8.json
data/reports/: cldPt.json  histgraph.json  knn_HB0.csv  knn_HB1.csv  knn_HB14.csv  knn_HB14_A.csv  knn_HB14_H.csv  knn_HB14_H_W.csv  knn_HB14_P.csv  knn_HB14_P_A.csv  knn_HB14_P_A_H_W.csv  knn_HB14_W.csv  knn_HB1_A.csv  knn_HB1_H.csv  knn_HB1_H_W.csv  knn_HB1_P.csv  knn_HB1_P_A.csv  knn_HB1_P_A_H_W.csv  knn_HB1_W.csv  knn_HB40.csv  knn_HB40_A.csv  knn_HB40_H.csv  knn_HB40_H_W.csv  knn_HB40_P.csv  knn_HB40_P_A.csv  knn_HB40_P_A_H_W.csv  knn_HB40_W.csv  stats.json
data/rois/: 100097167.json  100141876.json  100201968.json  100222814.json  100266244.json  100366318.json  100658414.json  10072452.json  10080784.json  100837921.json  100854400.json  101192588.json  10126344.json  101297458.json  101561372.json  101611181.json  101644748.json  101879945.json  10201847.json  102151361.json  102448973.json  102460554.json  102630336.json  102732190.json  10276377.json  102793490.json  102806117.json  102837679.json  102847329.json  102851627.json  103219719.json  103481120.json  103514538.json  103609633.json  103760321.json  103803375.json  103840213.json  104090746.json  104261615.json  104531470.json  (+885 more)
data/screenshots/: 100003870.json  100383236.json  101152600.json  101457140.json  101680581.json  101819927.json  102051331.json  102411914.json  102509101.json  102990119.json  103620011.json  103628070.json  103670361.json  103724819.json  103763740.json  103828612.json  104099550.json  104442806.json  104525734.json  104893443.json  105014842.json  10502060.json  105151155.json  105627102.json  105723004.json  106800213.json  107166002.json  107484872.json  10780420.json  108070577.json  108075960.json  108181996.json  108282920.json  108744518.json  109165180.json  109367780.json  11257337.json  11571449.json  11638309.json  12065895.json  (+245 more)
(+10 files in other folders)
